@@ -1,5 +1,7 @@
 == master
 
+* Add Model#find_all_by_enumerator
+* Don't internally rely on Model#[] being available since it may conflict with other plugins
 * Enable caching by default for all enumerations
 * Allow caching to be turned off on an application-wide basis
 * Allow cache store to be configurable
